fix: grid alignment

--- a/src/sass/sections/_curator.scss
+++ b/src/sass/sections/_curator.scss
@@ -48,6 +48,8 @@
         grid-column: 2 / -1;
         border-top: none;
         padding: 0 0 $grid-gutter-width*.5 0;
+        display: flex;
+        gap: $spacer*1.25;
       }
       @include media-breakpoint-up(lg) {
         border: none;
@@ -62,15 +64,13 @@
         object-position: center;
         @include media-breakpoint-up(md) {
           height: 100%;
-          width: 50%;
+          flex: 1;
         }
       }
       .text {
         display: flex;
         flex-direction: column;
-        @include media-breakpoint-up(lg) {
-          padding: 0 $spacer*.5;
-        }
+        flex: 1;
         h3 {
           font-size: $font-size-base*1.375;
           font-weight: $font-weight-semibold;
